hide disqus_thread in print media

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -230,7 +230,7 @@ nav.menu {
       font-size: 100%;
     }
   }
-  .subscribe, nav.menu, footer {
+  .subscribe, nav.menu, footer, #disqus_thread {
     display: none;
   }
 }
