--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+
+<!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
   {% include head.html %}
@@ -18,6 +23,9 @@
         {{ content }}
       </div>
     </main>
+
+
+    {% include sidebar.html %}
 
     {% include footer.html %}
 
