--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,16 +1,15 @@
 <aside id="sidebar">
-  <section class="tags_widget"> 
-   <h4 class="instagram_widget">Tags</h4>
+  <section class="tags_widget">
+   <h4>Tags</h4>
   </section>
 
   <section class="gallery_widget">
-   <h4 class="instagram_widget">Gallery</h4> 
+   <h4>Gallery</h4>
   </section>
 
   <section class="instagram_widget">
-   <h4 class="instagram_widget">Instagram</h4>
+   <h4>Instagram</h4>
   </section>
-
 </aside>
 
 
