--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,28 +14,31 @@ $font-text: Palatino, "Palatino_Linotype", "Book Antiqua", serif;
   border-radius: 5px;
 }
 
-aside, footer, header, menu, nav { 
-    display: block;
+aside, footer, header, menu, nav {
+  display: block;
 }
-
 
 body {
   font-size: 17px;
   font-family: $font-text;
   width: 980px;
-  margin: 0 auto;
+  margin: 8px auto;
   // background-color:  #e6ffff;
   background-color: #e6f9ff;
 }
 
 .page-content {
-  width: 660px;
+  width: 685px;
+  padding: 0;
   padding-top: 5px;
   float: left;
 }
 
 .wrapper {
   padding: 0;
+  margin: 0;
+  width: 100%;
+  max-width: 100%;
 
   .post {
     padding: 10px 20px;
@@ -86,7 +89,6 @@ body {
 
 header, footer {
   font-style: italic;
-  clear:both;
 
   &.site-header, &.site-footer {
     border: 0;
@@ -94,8 +96,8 @@ header, footer {
   .wrapper {
     box-shadow: 0 0 10px rgba(0,0,0,0.6);
     border-radius: 5px;
-    background-repeat: no-repeat; 
-    background-position:center; 
+    background-repeat: no-repeat;
+    background-position:center;
     padding: 0;
   }
 }
@@ -127,6 +129,8 @@ header {
 }
 
 footer {
+  clear: both;
+
   &.site-footer {
     padding: 0;
   }
@@ -178,18 +182,18 @@ nav.menu {
   margin: auto;
   padding: 2px 0;
   margin-top: 10px;
-  max-width: calc(800px - (30px * 2));
+  max-width: 100%;
   @include border-shadow;
   font-size: 15px;
   font-weight: bold;
-  background: white;  
+  background: white;
   text-align: center;
 
   input {
     margin-left: 3px;
   }
 }
-  
+
 .subscribe-page {
   font-size: 19px;
 
@@ -202,7 +206,7 @@ nav.menu {
   }
 
   #submit {
-    background-color: #00b0e6; 
+    background-color: #00b0e6;
     border: none;
     color: white;
     padding: 10px 36px;
@@ -232,20 +236,17 @@ nav.menu {
   /* background: rgba(0,0,0,.5); */
 }
 
-
 #sidebar {
-  width: 200px;
+  width: 280px;
   float: right;
   padding: 5px 0;
-  margin: 10px 10px;
+  margin: 10px 0;
 
+  section {
+    background-color: #fff;
+    @include border-shadow;
+  }
 }
-
-.tags_widget, .gallery_widget, .instagram_widget{
-  background-color: white;
-  @include border-shadow;
-}
-
 
 @media print {
   header {
