--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,14 +1,23 @@
 <aside id="sidebar">
-  <section class="tags_widget">
-   <h4>Tags</h4>
-  </section>
+  <!-- <section class="tags-widget"> -->
+  <!-- <h4>Tags</h4> -->
+  <!-- </section> -->
 
-  <section class="gallery_widget">
-   <h4>Gallery</h4>
-  </section>
+  <!-- <section class="gallery-widget"> -->
+  <!-- <h4>Gallery</h4> -->
+  <!-- </section> -->
 
-  <section class="instagram_widget">
-   <h4>Instagram</h4>
+  <section class="instagram-widget">
+    <a href="http://instagram.com/karmelalla" target="_blank">
+      <h4>Instagram</h4>
+    </a>
+    <div class="instagram-wrapper">
+      <img class="ratio" src="http://placehold.it/1x1/ffffff"/>
+      <iframe src="http://lightwidget.com/widgets/f8b7e839d1dd555d8022b473143c3cc4.html" scrolling="no" class="lightwidget-widget"></iframe>
+      <a href="http://instagram.com/karmelalla" target="_blank">
+        <div class="instagram-link"></div>
+      </a>
+    </div>
   </section>
 </aside>
 
