--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,6 +1,6 @@
 <div class="subscribe">
   <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
-    Пожалуйста, подписывайтесь на рассылку &nbsp;
+    Пожалуйста, подписывайтесь на рассылку новых историй &nbsp;
     {% include subscribe-form.html %}
   </form>
 </div>
