--- a/_includes/icon-facebook.html
+++ b/_includes/icon-facebook.html
@@ -1,3 +1,4 @@
 <a target="_blank" href="https://www.facebook.com/{{ include.username }}">
-<img src="/assets/images/facebook.png"> 
-<span class="username">{{ include.username }}</span></a>
+  <img src="/assets/images/facebook.png" class="icon"> 
+  <span class="username">{{ include.username }}</span>
+</a>
