--- a/_includes/icon-instagram.html
+++ b/_includes/icon-instagram.html
@@ -1,5 +1,4 @@
 <a target="_blank" href="https://instagram.com/{{ include.username }}">
-  <img src="/assets/images/instagram.png">
-  <span class="username">{{ include.username }}
-  </span>
+  <img src="/assets/images/instagram.png" class="icon">
+  <span class="username">{{ include.username }}</span>
 </a>
