--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 
   <section class="instagram-widget">
     <a href="http://instagram.com/karmelalla" target="_blank">
-      <h4>Instagram (@karmelalla)</h4>
+      <h4><img src="/assets/images/instagram.png" class="icon">Instagram (@karmelalla)</h4>
     </a>
     <div class="instagram-wrapper">
       <img class="ratio" src="http://placehold.it/1x1/ffffff"/>
