--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,13 +4,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="keywords" content="karmelalla,usa,blog,америка,блог,сша,переезд,английский,Сан Франциско,San Francisco">
+  <meta name="keywords" content="karmelalla,usa,blog,америка,блог,сша,переезд,английский,Сан Франциско,San Francisco,калифорния,california,alla isakova,алла исакова">
   <meta name="author" content="Алла Исакова,Алла Гуревич,Alla Isakova,Alla Gurevich">
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <meta name="viewport" content="width=device-width; initial-scale=1.0">
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}{{ "now" | date: "%Y%m%d%H%M%S" | prepend: "?" }}">
-  <link rel="stylesheet" href="{{ "/assets/media-queries.css" | relative_url }}{{ "now" | date: "%Y%m%d%H%M%S" | prepend: "?" }}" type="text/css">
+  <link rel="stylesheet" href="{{ "/assets/media-queries.css" | relative_url }}{{ "now" | date: "%Y%m%d%H%M%S" | prepend: "?" }}">
+
+  {% if page.url contains "/cooking" %}
+    <link rel="stylesheet" href="{{ "/assets/cooking.css" | relative_url }}{{ "now" | date: "%Y%m%d%H%M%S" | prepend: "?" }}">
+  {% endif %}
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
