--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,13 +19,24 @@ aside, footer, header, menu, nav {
   display: block;
 }
 
+html {
+  min-height: 100%;
+  position: relative;
+}
+
 body {
+  min-height: 100%;
   font-size: 17px;
   font-family: $font-text;
-  width: 980px;
-  margin: 8px auto;
-  // background-color:  #e6ffff;
   background-color: #e6f9ff;
+  background: linear-gradient(#e6ffff, #e6f9ff, #8adae1);
+
+  .site-wrapper {
+    min-height: 100%;
+    width: 980px;
+    margin: 0 auto;
+    margin-bottom: 163px;
+  }
 }
 
 .page-content {
@@ -271,7 +282,15 @@ nav.menu {
 }
 
 footer {
-  clear: both;
+  // clear: both;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 163px;
+  width: 980px;
+  margin: 0 auto;
 
   &.site-footer {
     padding: 0;
