footer and gradient works

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body>
-    <div class="site-wrapper">
+    <!-- <div class="site-wrapper"> -->
       {% include header.html %}
 
       {% include menu.html %}
@@ -22,9 +22,9 @@
 
       {% include sidebar.html %}
 
-      <div class="clear"></div>
+      <div class="clear footer-hack"></div>
 
-    </div>
+    <!-- </div> -->
     
     {% include footer.html %}
 
