--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,17 +26,18 @@ html {
 
 body {
   min-height: 100%;
+  width: 980px;
+  margin: 0 auto;
   font-size: 17px;
   font-family: $font-text;
   background-color: #e6f9ff;
   background: linear-gradient(#e6ffff, #e6f9ff, #8adae1);
 
-  .site-wrapper {
-    min-height: 100%;
-    width: 980px;
-    margin: 0 auto;
-    margin-bottom: 163px;
-  }
+  // .site-wrapper {
+    // min-height: 100%;
+    // width: 980px;
+    // margin: 0 auto;
+  // }
 }
 
 .page-content {
@@ -207,6 +208,10 @@ nav.menu {
   clear: both;
 }
 
+.footer-hack {
+  margin-bottom: 163px;
+}
+
 .cooking {
   .thumbnail {
     img {
@@ -287,9 +292,8 @@ footer {
   right: 0;
   bottom: 0;
   left: 0;
-  width: 100%;
   height: 163px;
-  width: 980px;
+  max-width: 980px;
   margin: 0 auto;
 
   &.site-footer {
