--- a/assets/main.scss
+++ b/assets/main.scss
@@ -332,15 +332,22 @@ footer {
 }
 
 @media print {
-  header {
-    height: 40px;
+  // header {
+  //   height: 40px;
 
-    .wrapper a.site-title {
-      padding: 0;
-      font-size: 100%;
-    }
+  //   .wrapper a.site-title {
+  //     padding: 0;
+  //     font-size: 100%;
+  //   }
+  // }
+
+  body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
-  .subscribe, nav.menu, footer, #disqus_thread {
+
+  .subscribe, nav.menu, footer, #disqus_thread, #sidebar, header {
     display: none;
   }
 }
