--- a/assets/main.scss
+++ b/assets/main.scss
@@ -332,14 +332,14 @@ footer {
 }
 
 @media print {
-  // header {
-  //   height: 40px;
+  header {
+    height: 40px;
 
-  //   .wrapper a.site-title {
-  //     padding: 0;
-  //     font-size: 100%;
-  //   }
-  // }
+    .wrapper a.site-title {
+      padding: 0;
+      font-size: 100%;
+    }
+  }
 
   body {
     width: 100%;
@@ -347,7 +347,7 @@ footer {
     padding: 0;
   }
 
-  .subscribe, nav.menu, footer, #disqus_thread, #sidebar, header {
+  .subscribe, nav.menu, footer, #disqus_thread, #sidebar {
     display: none;
   }
 }
