--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,12 @@
 <aside id="sidebar">
-  <!-- <section class="tags-widget"> -->
-  <!-- <h4>Tags</h4> -->
-  <!-- </section> -->
+  <section class="about-widget">
+    <img src="/assets/images/avatar.jpg">
+    <p>Этот блог появился в первую очередь для меня самой. Как практика - помнить и осознавать себя, каждый бесценный день своей жизни.</p>
 
-  <!-- <section class="gallery-widget"> -->
-  <!-- <h4>Gallery</h4> -->
-  <!-- </section> -->
+    <p class="without-margin">Во-вторых, для родных. Чтобы они могли лучше следить за происходящим. Хоть немного прочувствовать наши впечатления и переживания.
+    Ну и конечно, для друзей и всех тех, кому будет интересно следить за нашими сказочными приключениями.
+    Пожалуйста, не судите строго. Это всего лишь мои заметки. Если вам понравится - я буду рада.</p>
+  </section>
 
   <section class="instagram-widget">
     <a href="http://instagram.com/karmelalla" target="_blank">
@@ -19,4 +20,8 @@
       </a>
     </div>
   </section>
+
+  <section class="subscription-widget">
+  </section>
 </aside>
+
