--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,16 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
- 
+
   {% include gallery.html %}
- 
+
+  <div class="subscribe-section">
+    <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
+      Чтобы всегда быть в курсе и первым узнавать о новых статьях, пожалуйста, оставьте свой email здесь:  &nbsp;
+      {% include subscribe-form.html %}
+    </form>
+  </div>
+
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
