--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 
   <div class="subscribe-section">
     <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
-      Чтобы всегда быть в курсе и первым узнавать о новых статьях, пожалуйста, оставьте свой email здесь:  &nbsp;
+      Если Вам понравилась история, подпишитесь на рассылку, чтобы первым получать уведомления о новых статьях:
       {% include subscribe-form.html %}
     </form>
   </div>
