finalized about and sidebar content

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,9 @@
 <aside id="sidebar">
   <section class="about-widget">
     <img src="/assets/images/avatar.jpg">
-    <p>Этот блог появился в первую очередь для меня самой. Как практика - помнить и осознавать себя, каждый бесценный день своей жизни.</p>
-
-    <p class="without-margin">Во-вторых, для родных. Чтобы они могли лучше следить за происходящим. Хоть немного прочувствовать наши впечатления и переживания.
-    Ну и конечно, для друзей и всех тех, кому будет интересно следить за нашими сказочными приключениями.
-    Пожалуйста, не судите строго. Это всего лишь мои заметки. Если вам понравится - я буду рада.</p>
+    <p>Всем привет! </p>
+    <p>Меня зовут Алла. В январе 2017 года мы с мужем переехали из Санкт-Петербурга в Сан Франциско. Раньше я никогда не планировала вести блог, но переезд изменил моё отношение. Новый опыт, множество интересных путешествий и впечатлений, очень захотелось всем этим поделиться. Да и самим не забывать.</p>
+    <p>Будем рады комментариям, идеям и советам. Читайте с удовольствием!</p>
   </section>
 
   <section class="instagram-widget">
@@ -21,7 +19,7 @@
     </div>
   </section>
 
-  <section class="subscription-widget">
-  </section>
+<!--   <section class="subscription-widget">
+  </section> -->
 </aside>
 
