if added to about and avatar to about page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,12 @@
 <aside id="sidebar">
-  <section class="about-widget">
-    <img src="/assets/images/avatar.jpg">
-    <p>Всем привет! </p>
-    <p>Меня зовут Алла. В январе 2017 года мы с мужем переехали из Санкт-Петербурга в Сан Франциско. Раньше я никогда не планировала вести блог, но переезд изменил моё отношение. Новый опыт, множество интересных путешествий и впечатлений, очень захотелось всем этим поделиться. Да и самим не забывать.</p>
-    <p>Будем рады комментариям, идеям и советам. Читайте с удовольствием!</p>
-  </section>
+  {% if page.url != "/about/" %}
+    <section class="about-widget">
+      <img src="/assets/images/avatar.jpg" class="about">
+      <p>Всем привет! </p>
+      <p>Меня зовут Алла. В январе 2017 года мы с мужем переехали из Санкт-Петербурга в Сан Франциско. Раньше я никогда не планировала вести блог, но переезд изменил моё отношение. Новый опыт, множество интересных путешествий и впечатлений. Очень захотелось всем этим поделиться. Да и самим не забывать.</p>
+      <p>Будем рады комментариям, идеям и советам. Читайте с удовольствием!</p>
+    </section>
+  {% endif %}
 
   <section class="instagram-widget">
     <a href="http://instagram.com/karmelalla" target="_blank">
