--- a/assets/main.scss
+++ b/assets/main.scss
@@ -246,6 +246,13 @@ nav.menu {
   /* background: rgba(0,0,0,.5); */
 }
 
+img.about {
+  float: left;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  border-radius: 50% !important;
+}
+
 #sidebar {
   width: 280px;
   float: right;
@@ -266,12 +273,6 @@ nav.menu {
       padding: 5px;
       font-size: 15px;
 
-      img {
-        float: left;
-        margin-right: 5px;
-        margin-bottom: 5px;
-        border-radius: 50%;
-      }
     }
 
     &.instagram-widget {
