fixed saint p name

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="keywords" content="karmelalla,usa,blog,америка,блог,сша,переезд,английский,Сан Франциско,San Francisco,калифорния,california,alla isakova,алла исакова">
+  <meta name="keywords" content="karmelalla,usa,blog,америка,блог,сша,переезд,английский,Сан-Франциско,San Francisco,калифорния,california,alla isakova,алла исакова">
   <meta name="author" content="Алла Исакова,Алла Гуревич,Alla Isakova,Alla Gurevich">
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
