--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
     <section class="about-widget">
       <img src="/assets/images/avatar.jpg" class="about">
       <p>Всем привет! </p>
-      <p>Меня зовут Алла. В январе 2017 года мы с мужем переехали из Санкт-Петербурга в Сан Франциско. Раньше я никогда не планировала вести блог, но переезд изменил моё отношение. Новый опыт, множество интересных путешествий и впечатлений. Очень захотелось всем этим поделиться. Да и самим не забывать.</p>
+      <p>Меня зовут Алла. В январе 2017 года мы с мужем переехали из Санкт-Петербурга в Сан-Франциско. Раньше я никогда не планировала вести блог, но переезд изменил моё отношение. Новый опыт, множество интересных путешествий и впечатлений. Очень захотелось всем этим поделиться. Да и самим не забывать.</p>
       <p>Будем рады комментариям, идеям и советам. Читайте с удовольствием!</p>
     </section>
   {% endif %}
