--- a/assets/main.scss
+++ b/assets/main.scss
@@ -380,7 +380,7 @@ footer {
     padding: 0;
   }
 
-  .subscribe, nav.menu, footer, #disqus_thread, #sidebar {
+  .subscribe, nav.menu, footer, #disqus_thread, #sidebar, .subscribe-section {
     display: none;
   }
 }
