--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,6 +8,11 @@
     </section>
   {% endif %}
 
+  <section class="tag-widget">
+    <h4>Теги</h4>
+    {% include tag_cloud.html %}
+  </section>
+
   <section class="instagram-widget">
     <a href="http://instagram.com/karmelalla" target="_blank">
       <h4><img src="/assets/images/instagram.png" class="icon">Instagram (@karmelalla)</h4>
@@ -20,8 +25,4 @@
       </a>
     </div>
   </section>
-
-<!--   <section class="subscription-widget">
-  </section> -->
 </aside>
-
