--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,8 @@ layout: default
     {{ content }}
   </div>
 
+  {% include tag_section.html %}
+
   {% include gallery.html %}
 
   <div class="subscribe-section">
