--- a/assets/main.scss
+++ b/assets/main.scss
@@ -298,24 +298,28 @@ img.about {
         margin-right: 10px;
       }
 
+      .set-1 {
+        font-size: 0.9em;
+      }
+
       .set-2 {
-        font-size: 110%;
+        font-size: 1.0em;
       }
 
       .set-3 {
-        font-size: 120%;
+        font-size: 1.1em;
       }
 
       .set-4 {
-        font-size: 130%;
+        font-size: 1.2em;
       }
 
       .set-5 {
-        font-size: 140%;
+        font-size: 1.3em;
       }
 
       .set-6 {
-        font-size: 150%;
+        font-size: 1.4em;
       }
     }
 
