--- a/_includes/tag_section.html
+++ b/_includes/tag_section.html
@@ -5,6 +5,6 @@
 {% assign tags = page | tags %}
 {% if tags != "" %}
   <div class="tags">
-    <i><p>Теги: {{ tags }}</p></i>
+    <i>Теги: {{ tags }}</i>
   </div>
 {% endif %}
