add filter for russian format date

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,5 +1,5 @@
 <div class="post">
-  <span class="post-meta">{{ post.date | date: "%B %-d, %Y" }}</span>
+  <span class="post-meta">{{ post.date | ru_date }}</span>
 
   <h2>
     <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
