--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
     {{ content }}
   </div>
 
-  {% include tag_section.html %}
+  <p>{% include tag_section.html %}</p>
 
   {% include gallery.html %}
 
