--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,13 +14,13 @@
   </section>
 
   <section class="instagram-widget">
-    <a href="http://instagram.com/karmelalla" target="_blank">
+    <a href="https://instagram.com/karmelalla" target="_blank">
       <h4><img src="/assets/images/instagram.png" class="icon">Instagram (@karmelalla)</h4>
     </a>
     <div class="instagram-wrapper">
-      <img class="ratio" src="http://placehold.it/1x1/ffffff"/>
-      <iframe src="http://lightwidget.com/widgets/e406d2d089835e6b992ece7f8418f050.html" scrolling="no" class="lightwidget-widget"></iframe>
-      <a href="http://instagram.com/karmelalla" target="_blank">
+      <img class="ratio" src="https://placehold.it/1x1/ffffff"/>
+      <iframe src="https://lightwidget.com/widgets/e406d2d089835e6b992ece7f8418f050.html" scrolling="no" class="lightwidget-widget"></iframe>
+      <a href="https://instagram.com/karmelalla" target="_blank">
         <div class="instagram-link"></div>
       </a>
     </div>
