add facebook widget

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -300,6 +300,10 @@ img.about {
       font-size: 15px;
     }
 
+    &.facebook-widget {
+      text-align: center;
+    }
+
     &.tag-widget {
       padding: 0 7px 7px;
 
