--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,14 @@
+<div id="fb-root"></div>
+<script>
+ (function(d, s, id) {
+   var js, fjs = d.getElementsByTagName(s)[0];
+   if (d.getElementById(id)) return;
+   js = d.createElement(s); js.id = id;
+   js.src = 'https://connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v2.12&appId=1432494303648322&autoLogAppEvents=1';
+   fjs.parentNode.insertBefore(js, fjs);
+ }(document, 'script', 'facebook-jssdk'));
+</script>
+
 <header class="site-header" role="banner">
   <div class="wrapper">
     <a class="site-title" href="{{ "/" | relative_url}}">{{ site.title }}</a>
