add nickname for facebook

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
 
   <section class="facebook-widget">
     <a href="https://www.facebook.com/allaiphoto" target="_blank">
-      <h4><img src="/assets/images/facebook.png" class="icon">Facebook</h4>
+      <h4><img src="/assets/images/facebook.png" class="icon">Facebook (@allaiphoto)</h4>
     </a>
     <div class="fb-page" style="text-align: center;" data-href="https://www.facebook.com/allaiphoto" data-tabs="timeline" data-small-header="false" data-width="500" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/allaiphoto" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/allaiphoto">Alla Isakova Photography</a></blockquote></div>
   </section>
