--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,9 @@
     {% if jekyll.environment == 'production' %}
       {% include analytics.html %}
     {% endif %}
+
+    {% include snowflakes.html %}
+
   </body>
 
 </html>
