--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,4 +31,6 @@
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
   {% endif %}
+
+  {% include snowflakes_styles.html %}
 </head>
