--- a/_includes/snowflakes.html
+++ b/_includes/snowflakes.html
@@ -1,6 +1,6 @@
 <section id="snow"></section>
 
-<script src="/assets/snowflakes.min.js"></script>
+<script src="https://unpkg.com/magic-snowflakes@4.1.0/dist/snowflakes.min.js"></script>
 
 <script>
   $(document).ready(function() {
@@ -16,20 +16,3 @@
     }
   });
 </script>
-
-<style>
-  #snow {
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-  }
-
-  @media screen and (max-width: 1200px) {
-    #snow {
-      display: none;
-    }
-  }
-</style>
