--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,8 @@
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
   {% endif %}
+
+  {% if jekyll.environment == 'production' %}
+    <script data-ad-client="ca-pub-5711023291204632" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  {% endif %}
 </head>
