--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,8 +26,9 @@ body {
   margin: 5px auto 0 auto;
   font-size: 17px;
   font-family: $font-text;
-  background-color: #e6f9ff;
-  background: linear-gradient(#e6ffff, #e6f9ff, #8adae1);
+  //background-color: #e6f9ff;
+  background-color: #f2f5f4
+  //background: linear-gradient(#e6ffff, #e6f9ff, #8adae1);
 }
 
 .page-content {
